# hrpsys-base

./: .gitignore  .travis.yml  CMakeLists.txt  package.xml
idl/: AutoBalanceStabilizerService.idl  AutoBalancerService.idl  CMakeLists.txt  EmergencyStopperService.idl  HRPDataTypes.idl  ReferenceForceUpdaterService.idl  RobotHardwareService.idl  StabilizerService.idl  WholeBodyMasterSlaveService.idl
launch/: samplerobot.launch
lib/io/: iob.cpp  iob.h
lib/util/: BodyRTC.cpp  BodyRTC.h
python/: hrpsys_config.py
rtc/: CMakeLists.txt
rtc/AutoBalanceStabilizer/: AutoBalanceStabilizer.cpp  AutoBalanceStabilizer.h  AutoBalanceStabilizerComp.cpp  AutoBalanceStabilizerService_impl.cpp  AutoBalanceStabilizerService_impl.h  AutoBalancer.cpp  AutoBalancer.h  AutoBalancerComp.cpp  AutoBalancerService_impl.cpp  CMakeLists.txt  COGTrajectoryGenerator.cpp  COGTrajectoryGenerator.h  DiscreteAlgebraicRiccatiEquation.h  EigenUtil.cpp  EigenUtil.h  FootStepType.h  FullbodyInverseKinematicsSolver.h  GaitGenerator.cpp  GaitGenerator.h  GaitGeneratorABS.h  Integrator.cpp  LimbTrajectoryGenerator.cpp  LimbTrajectoryGenerator.h  LinkConstraint.cpp  LinkConstraint.h  PlaneGeometry.h  PreviewController.cpp  PreviewController.h  RefZMPGenerator.cpp  RefZMPGenerator.h  SimpleFullbodyInverseKinematicsSolver.h  Stabilizer.cpp  Stabilizer.h  StateEstimator.cpp  StateEstimator.h  TDMASolver.h  TwoDofController.cpp  TwoDofController.h  Utility.h  ZMPDistributor.h  (+1 more)
rtc/AutoBalanceStabilizer/test/: testCOGTrajectoryGenerator.cpp  testLimbTrajectoryGenerator.cpp  testRefZMPGenerator.cpp
rtc/AutoBalancer/: #AutoBalancer.cpp#  #Stabilizer.h#  .clang-format  AutoBalancer.cpp  AutoBalancer.h  AutoBalancerService_impl.cpp  AutoBalancerService_impl.h  CMakeLists.txt  FootGuidedController.cpp  FootGuidedController.h  FullbodyInverseKinematicsSolver.h  GaitGenerator.cpp  GaitGenerator.h  PreviewController.cpp  PreviewController.h  ResolvedMomentumControl.cpp  SimpleFullbodyInverseKinematicsSolver.h  Stabilizer.cpp  Stabilizer.h  Stabilizer2.cpp  Stabilizer2.h  testGaitGenerator.cpp  testPreviewController.cpp
rtc/EmergencyStopper/: EmergencyStopper.cpp  EmergencyStopper.h  EmergencyStopperService_impl.cpp  EmergencyStopperService_impl.h
rtc/ImpedanceController/: JointPathEx.cpp
rtc/PCDLoader/: CMakeLists.txt
rtc/PDcontroller/: PDcontroller.cpp  PDcontroller.h
rtc/ReferenceForceUpdater/: ReferenceForceUpdater.cpp  ReferenceForceUpdater.h
rtc/RobotHardware/: RobotHardware.cpp  RobotHardware.h  RobotHardwareService_impl.cpp  RobotHardwareService_impl.h  robot.cpp  robot.h
rtc/SequencePlayer/: SequencePlayer.cpp  SequencePlayer.h  interpolator.cpp  interpolator.h
rtc/Stabilizer/: CMakeLists.txt  Stabilizer.cpp  Stabilizer.h  ZMPDistributor.h
rtc/WholeBodyMasterSlave/: WholeBodyMasterSlave.cpp  WholeBodyMasterSlave.h  wbms_core.h
sample/SampleRobot/: samplerobot_auto_balance_stabilizer.py  samplerobot_auto_balancer.py
test/: test-samplerobot-abst.py  test-samplerobot-abst.test  test-samplerobot.test
